[gd_scene load_steps=11 format=3 uid="uid://cwvg7830bux5d"]

[ext_resource type="Script" path="res://minigame/cupswap/Scripts/CupSwap.gd" id="1_3g2hc"]
[ext_resource type="Texture2D" uid="uid://xnmk8r6hgql5" path="res://minigame/cupswap/Assets/Cup_Swap_Game_Background.png" id="2_fcl1t"]
[ext_resource type="Texture2D" uid="uid://81j7tcs38pae" path="res://minigame/cupswap/Assets/Cotton_Candy_Prize_-_Cup_Swap.png" id="3_v1nnl"]
[ext_resource type="Texture2D" uid="uid://44wowhpaotue" path="res://minigame/cupswap/Assets/Trash_Can_cupswap.png" id="4_uy6yb"]
[ext_resource type="AudioStream" uid="uid://ootq6miqb6cx" path="res://minigame/cupswap/sounds/A_Halloween_on_Maple_Street_-_Racoon_Game.mp3" id="6_bdh80"]
[ext_resource type="Texture2D" uid="uid://ibscnkijh11p" path="res://minigame/cupswap/Assets/RaccoonGameScreenTransparent.png" id="6_q57a5"]
[ext_resource type="FontFile" uid="uid://bbsbxslie4s0h" path="res://global/fonts/ComicNeue-Regular.ttf" id="7_hk6ye"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yya4s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qunf4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ane53"]

[node name="CupSwap" type="Node2D"]
script = ExtResource("1_3g2hc")

[node name="CupSwapGameBackground" type="Sprite2D" parent="."]
position = Vector2(1261, 544)
scale = Vector2(1.2, 1.2)
texture = ExtResource("2_fcl1t")

[node name="Cotton" type="Sprite2D" parent="."]
visible = false
position = Vector2(1017, 526)
rotation = -0.417134
scale = Vector2(0.449, 0.449)
texture = ExtResource("3_v1nnl")

[node name="Cotton2" type="Sprite2D" parent="."]
visible = false
position = Vector2(1260, 526)
rotation = -0.417134
scale = Vector2(0.449, 0.449)
texture = ExtResource("3_v1nnl")

[node name="Cotton3" type="Sprite2D" parent="."]
visible = false
position = Vector2(1520, 526)
rotation = -0.417134
scale = Vector2(0.449, 0.449)
texture = ExtResource("3_v1nnl")

[node name="PlayButton" type="Button" parent="."]
offset_left = 1164.0
offset_top = 552.0
offset_right = 1364.0
offset_bottom = 670.0
theme_override_font_sizes/font_size = 80
text = "PLAY"

[node name="Trash1" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1113.0
offset_top = 401.0
offset_right = 1875.0
offset_bottom = 1249.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
scale = Vector2(0.294, 0.294)
theme_override_styles/focus = SubResource("StyleBoxEmpty_yya4s")
icon = ExtResource("4_uy6yb")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Trash2" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1372.0
offset_top = 401.0
offset_right = 2134.0
offset_bottom = 1249.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
scale = Vector2(0.294, 0.294)
theme_override_styles/focus = SubResource("StyleBoxEmpty_qunf4")
icon = ExtResource("4_uy6yb")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Trash3" type="Button" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1632.0
offset_top = 401.0
offset_right = 2394.0
offset_bottom = 1249.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
scale = Vector2(0.294, 0.294)
theme_override_styles/focus = SubResource("StyleBoxEmpty_ane53")
icon = ExtResource("4_uy6yb")
flat = true
icon_alignment = 1
expand_icon = true

[node name="Retry" type="Button" parent="."]
visible = false
offset_left = 1124.0
offset_top = 425.0
offset_right = 1407.0
offset_bottom = 543.0
theme_override_font_sizes/font_size = 80
text = "RETRY?"

[node name="RaccoonGameScreenTransparent" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("6_q57a5")

[node name="ExitGame" type="Button" parent="."]
visible = false
offset_left = 1163.0
offset_top = 680.0
offset_right = 1365.0
offset_bottom = 743.0
theme_override_font_sizes/font_size = 40
text = "Exit Game"

[node name="CupswapMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_bdh80")
autoplay = true

[node name="Instructions" type="Label" parent="."]
offset_left = 82.0
offset_top = 135.0
offset_right = 519.0
offset_bottom = 264.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7_hk6ye")
theme_override_font_sizes/font_size = 45
text = "Find the bin with the cotton candy!"
horizontal_alignment = 1
vertical_alignment = 3
autowrap_mode = 3
justification_flags = 128

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="Trash1" to="." method="_on_trash_1_pressed"]
[connection signal="pressed" from="Trash2" to="." method="_on_trash_2_pressed"]
[connection signal="pressed" from="Trash3" to="." method="_on_trash_3_pressed"]
[connection signal="pressed" from="Retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="ExitGame" to="." method="_on_exit_game_pressed"]
